export default {
  placeholder: 'Selecionar músculo',
  upperBody: 'Superiores',
  lowerBody: 'Inferiores',
  core: 'Core',
  chest: 'Peito',
  back: 'Costas',
  shoulders: 'Ombros',
  biceps: 'Bíceps',
  triceps: 'Tríceps',
  forearms: 'Antebraço',
  quadriceps: 'Quadríceps',
  hamstrings: 'Posterior de Coxa',
  glutes: 'Glúteos',
  calves: 'Panturrilhas',
  adductors: 'Adutores',
  abs: 'Abdômen',
  lowerBack: 'Lombar',
  pectoralisMajor: 'Peitoral Maior',
  pectoralisMinor: 'Peitoral Menor',
  latissimusDorsi: 'Latíssimo do Dorso',
  trapezius: 'Trapézio',
  rhomboids: 'Romboides',
  erectorSpinae: 'Eretor da Espinha',
  anteriorDeltoid: 'Deltoide Anterior',
  lateralDeltoid: 'Deltoide Lateral',
  posteriorDeltoid: 'Deltoide Posterior',
  bicepsLongHead: 'Bíceps Cabeça Longa',
  bicepsShortHead: 'Bíceps Cabeça Curta',
  tricepsLongHead: 'Tríceps Cabeça Longa',
  tricepsLateralHead: 'Tríceps Cabeça Lateral',
  tricepsMedialHead: 'Tríceps Cabeça Medial',
  brachioradialis: 'Braquiorradial',
  wristFlexors: 'Flexores do Punho',
  wristExtensors: 'Extensores do Punho',
  vastusLateralis: 'Vasto Lateral',
  vastusMedialis: 'Vasto Medial',
  vastusIntermedius: 'Vasto Intermédio',
  rectusFemoris: 'Reto Femoral',
  bicepsFemoris: 'Bíceps Femoral',
  semitendinosus: 'Semitendíneo',
  semimembranosus: 'Semimembranáceo',
  gluteusMaximus: 'Glúteo Máximo',
  gluteusMedius: 'Glúteo Médio',
  gluteusMinimus: 'Glúteo Mínimo',
  gastrocnemius: 'Gastrocnêmio',
  soleus: 'Sóleo',
  rectusAbdominis: 'Reto Abdominal',
  obliques: 'Oblíquos',
  transverseAbdominis: 'Transverso Abdominal',
  lumbarErectorSpinae: 'Eretor da Espinha Lombar',
};
