export default {
  exercises: 'Exercícios',
  workouts: 'Treinos',
  cardio: 'Cardio',
  periodization: 'Programação',
  workoutHistory: 'Histórico de treino',
  newFolder: 'Nova pasta',
  folders: 'Pastas',
...
